fixed the contrast

--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,11 @@ body {
     padding: 0px;
     overflow-x: hidden;
     min-width: 320px;
-    background: #FFFFFF;
+    background: #000000;
     font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 1.4285em;
-    color: #000000;
+    color: #FFFFFF;
 }
 
 h1 {
@@ -158,7 +158,7 @@ h5:first-child {
 .ui.form .field>label {
     display: block;
     margin: 0em 0em 0.28571429rem 0em;
-    color: #000000;
+    color: #FFFFFF;
     font-size: 1em;
     font-weight: bold;
     text-transform: none;
@@ -187,7 +187,7 @@ h5:first-child {
     padding: 0.67857143em 1em;
     font-size: 1em;
     background: #FFFFFF;
-    border: 1px solid #85B7D9;
+    border: 1px solid #FFFFFF;
     color: #000000;
     border-radius: 0.28571429rem;
     -webkit-box-shadow: 0em 0em 0em 0em transparent inset;
@@ -213,7 +213,7 @@ h5:first-child {
 .ui.form input[type="file"]:focus,
 .ui.form input[type="url"]:focus {
     color: #000000;
-    border-color: #85B7D9;
+    border-color: #FFFFFF;
     border-radius: 0.28571429rem;
     background: #FFFFFF;
     -webkit-box-shadow: 0px 0em 0em 0em rgba(34, 36, 38, 0.35) inset;
@@ -270,9 +270,11 @@ h5:first-child {
     -webkit-tap-highlight-color: transparent;
 }
 
-
+span{
+    color: red;
+}
 .ui.positive.button {
-    background-color: #21BA45;
+    background-color: red;
     color: #FFFFFF;
     text-shadow: none;
     background-image: none;
